# custom_number_lib

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  two_bignums.c  two_complex_numbers.c  two_integers.c  two_rationals.c
src/include/custom_numbers/: bignum.h  builtin_types.h  complex.h  custom_numbers.h  generic.h  helper.h  linked_list.h  logger.h  rational.h
src/lib/: CMakeLists.txt  bignum.c  builtin_types.c  complex.c  custom_numbers.c  generic.c  helper.c  linked_list.c  logger.c  rational.c
